tests/valid/struct/mutable_field_assign.facet
struct Slot {
  mut x: unrestricted isize
}

fn main() -> unrestricted isize {
  let mut s: unrestricted Slot = Slot { x = 0 };
  (s.x = 1);
  s.x
}
