tests/invalid/struct/immutable_field_assign.facet
struct Slot {
  x: unrestricted isize
}

fn main() -> unrestricted () {
  let mut s: unrestricted Slot = Slot { x = 0 };
  (s.x = 1)
}
